[HOCS-7073] Stream users from keycloak to reduce memory footprint and improve time to first response byte (#749)