@@ -4,6 +4,9 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+
+import java.io.ByteArrayOutputStream;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
@@ -17,6 +20,7 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBody;
 import uk.gov.digital.ho.hocs.info.api.dto.CreateUserDto;
 import uk.gov.digital.ho.hocs.info.api.dto.CreateUserResponse;
 import uk.gov.digital.ho.hocs.info.api.dto.UpdateUserDto;
@@ -32,24 +36,29 @@ public class UserResourceTest {
 
     @Before
     public void setUp() {
-        userResource = new UserResource(userService);
+        userResource = new UserResource(userService, new ObjectMapper());
     }
 
     @Test
-    public void shouldGetAllUsers() {
+    public void shouldGetAllUsers() throws Exception {
 
         String user1UUID = UUID.randomUUID().toString();
         String user2UUID = UUID.randomUUID().toString();
-        List<UserDto> users = new ArrayList<>();
         UserDto user1 = new UserDto(user1UUID, "some user", "user1@noemail.com", "FirstName", "LastName", true);
         UserDto user2 = new UserDto(user2UUID, "some user2", "user2@noemail.com", "FirstName2", "LastName2", true);
-        users.addAll(Stream.of(user1, user2).collect(Collectors.toList()));
+        List<UserDto> users = Stream.of(user1, user2).toList();
 
-        when(userService.getAllUsers()).thenReturn(users);
+        when(userService.streamAllUsers()).thenReturn(users.stream());
 
-        ResponseEntity<List<UserDto>> result = userResource.getAllUsers();
+        ResponseEntity<StreamingResponseBody> result = userResource.getAllUsers();
         assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(result.getBody().size()).isEqualTo(2);
+
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+        assertThat(result.getBody()).isNotNull();
+        result.getBody().writeTo(outputStream);
+
+        assertThat(outputStream.toString()).contains(user1UUID, user2UUID);
+        verify(userService).streamAllUsers();
     }
 
     @Test
